# agree_gui

./: CMakeLists.txt  README  mainpage.dox  matrix.cpp  matrix.h  matrix.ui  matrixwidget.cpp  matrixwidget.h  package.xml
config/: evaluation.yaml  exercise.yaml  general.yaml  physiological_param.yaml  point.yaml  test.yaml
database/: Sqlite_prova2  Sqlite_prova2-journal
include/agree_gui/: fsm_gui_define.h  griddialog.h  login.h  main_window.hpp  matplotlibcpp.h  matrix.h  matrixwidget.h  paginaprincipale.h  qnode.hpp  sc_assistivo.h
launch/: FSM.launch
mat/: point_boolean_left.CSV  point_boolean_right.CSV
msg/: agree_emg_status.msg  agree_esmacat_command.msg  agree_gui_command.msg
resources/: Punti_tappetino.csv  images.qrc  images2.qrc  posizioni.txt
src/: griddialog.cpp  login.cpp  main.cpp  main_window.cpp  matrix.cpp  matrixwidget.cpp  matrixwidget.cpp.autosave  paginaprincipale.cpp  qnode.cpp  sc_assistivo.cpp
ui/: griddialog.ui  login.ui  main_window.ui  matrix.ui  paginaprincipale.ui  sc_assistivo.ui  sc_assistivo.ui.autosave
